--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -1,7 +1,8 @@
 // Breakpoint setup for media queries
 $breakpoints: ( 'phone': 400px, 'phone-wide': 480px, 'phablet': 560px, 'tablet-small': 640px, 'tablet': 768px, 'tablet-wide': 1024px, 'desktop': 1248px, 'desktop-wide': 1440px);
 
-$header-tabs-height: 40px;
+$image-fix-margin-top: -3px; // must be negative
+$header-tabs-height: 40px + abs($image-fix-margin-top);
 
 $color-white: rgba(255,255,255,1);
 $color-coral: rgba(43,43,43,1);
