--- a/src/scss/partials/_slideshow.scss
+++ b/src/scss/partials/_slideshow.scss
@@ -15,16 +15,17 @@ body {font-family: Verdana,sans-serif;margin:0}
   &-prev, &-next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
-
+    top: 50%;
+    z-index: 998;
+    
     /* On hover, add a black background color with a little bit see-through */
     &:hover, &:hover {
       background-color: rgba(0,0,0,0.8);
@@ -104,9 +105,9 @@ body {font-family: Verdana,sans-serif;margin:0}
   }
 
   /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    &-prev, &-next,&-text {font-size: 11px}
-  }
+  //@media only screen and (max-width: 300px) {
+  //&-prev, &-next,&-text {font-size: 11px}
+  //}
 }
 
   .slideshow-dot-buttons {
